fix: adjust z-index value to ensure maps stay on top

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -629,7 +629,7 @@ justify-content: space-between;
               position: relative;
               cursor: pointer;
               padding:4px;
-              z-index: 2;
+              z-index: 2; /* set a lower z-index than the maps */
               span{
                 font-size:18px;
                 em{
@@ -696,16 +696,13 @@ justify-content: space-between;
           width:50px;
           height:50px;
           @include transition(all 300ms ease-in); 
-          //position: relative;
             }
             &:hover{
               z-index: 3;
               img{
                 @include transform(scale(2)translate(95px,0));
-                z-index: 999 !important;
                 box-shadow: 1px 1px 3px#666, 0 0 1px #777 ;
                 opacity:1;
-                //position: relative;
                 z-index: 3;
               }
             }
